inv.map: Fix object highlight on Firefox
--HG--
branch : develop

--- a/static/css/noc-extjs.css
+++ b/static/css/noc-extjs.css
@@ -203,10 +203,6 @@ TABLE {
     -webkit-filter: brightness(0.95);
 }
 
-.element.highlighted.nocobject {
-    filter: url(#highlight);
-}
-
 .noc-offset-0 {}
 
 .noc-offset-1 {
